--- a/Pertemuan7/bootstrap.html
+++ b/Pertemuan7/bootstrap.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .navbar-custom {
-      background-color: #9b59b6; /* Lavender gelap */
+      background-color: #9b59b6; 
     }
 
     .hero {
@@ -26,7 +26,7 @@
       content: "";
       position: absolute;
       top: 0; left: 0; right: 0; bottom: 0;
-      background-color: rgba(0, 0, 0, 0.4); /* overlay supaya teks terbaca */
+      background-color: rgba(0, 0, 0, 0.4); 
     }
 
     .hero .container {
@@ -35,8 +35,8 @@
     }
 
     .footer {
-      background-color: #e6ccff; /* Lavender muda */
-      color: #4a235a; /* teks ungu tua */
+      background-color: #e6ccff; 
+      color: #4a235a; 
       padding: 30px 0;
     }
 
